--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: Computer Science + Social Good
 subtitle: at UNC Chapel Hill
 email: cssgunc@gmail.com
 description: Fostering discussions and actions for ethical uses of technology, <br />with an aim to give back to UNC and the greater community through our projects and collaborations.
-baseurl: "/forty-jekyll-theme" # the subpath of your site, e.g. /blog
-url: # the base hostname & protocol for your site
+baseurl: "/jekyll-website" # the subpath of your site, e.g. /blog
+url: https://unc-cs-sg.github.io # the base hostname & protocol for your site
 author:
 street_address: 201 S. Columbia Street
 city: Chapel Hill
