Created changes to the configuration and the layout of some of the home screen.
Created changes to the configuration and the layout of some of the home screen.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # site settings
-title: Computer Science + Social Good
+title: CS + Social Good
 subtitle: at UNC Chapel Hill
 email: cssgunc@gmail.com
 description: Fostering discussions and actions for ethical uses of technology, <br />with an aim to give back to UNC and the greater community through our projects and collaborations.
