Added github to our list of social medias
Added github to our list of social medias

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ tiles-count: 4
 # social settings
 500px_url:
 facebook_url: https://www.facebook.com/cssguncch/
-github_url:
+github_url: https://github.com/unc-cs-sg
 gitlab_url:
 googleplus_url:
 instagram_url:
